<resources>
    <string name="app_name">Poke mon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_description">Login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="move_to_regist_text">Don\'t have a account yet? Register</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Include upper/lowercase, number, and symbol (8+ chars).</string>
    <string name="invalid_confirm_password">password is not the same</string>
    <string name="full_name">Full Name</string>
    <string name="regist_desc">Create your account</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="invalid_name">Name can not be empty</string>
    <string name="sign_up">Sign Up</string>

    <string name="pref_dark_follow_system" translatable="false">follow_system</string>
    <string name="pref_key_theme" translatable="false">key_theme</string>
    <string name="author_app">Muhammad Rafli Gimnastiar</string>
    <string name="account_not_found">Account not found</string>
    <string name="your_password_is_wrong">Your password is wrong</string>
    <string name="login_success">Login success</string>
    <string name="pass_pattern"><![CDATA[^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d)(?=.*[@$!%*?&])[A-Za-z\\d@$!%*?&]{8,}$]]></string>
    <string name="search_pokemon">Search your pokemon</string>
    <string name="pekemon_list">Pokemon List</string>
    <string name="Logout">Log Out</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>

    <string name="retry">Coba lagi</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="hero_abilities">Hero abilities :</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="make_sure_logout">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="your_email_has_registered">Your email is already registered</string>
    <string name="no_data_found">No Data Found..</string>
    <string name="please_open_some_data">Please open some data when you are online first</string>
    <string name="press_again_to_exit">press again to exit</string>
    <string name="input_password">Please input your password</string>
    <string name="you_has_been_logged_out">You has been logged out</string>
</resources>