<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.auth.login.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_ball_poke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/login_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfEmail"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/tvLoginDescription"
        app:layout_constraintStart_toStartOf="@id/tvLoginDescription"
        app:layout_constraintTop_toBottomOf="@id/tvLoginDescription"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="48dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfPassword"
        style="?attr/textInputFilledStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/tfEmail"
        app:layout_constraintStart_toStartOf="@id/tfEmail"
        app:layout_constraintTop_toBottomOf="@id/tfEmail"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="48dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:ignore="RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.7dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="@id/tfPassword"
        app:layout_constraintStart_toStartOf="@id/tfPassword"
        app:layout_constraintTop_toBottomOf="@id/tfPassword" />

    <TextView
        android:id="@+id/btnRegist"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/move_to_regist_text"
        app:layout_constraintEnd_toEndOf="@id/tfPassword"
        app:layout_constraintStart_toStartOf="@id/tfPassword"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_56dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="@id/btnRegist"
        app:layout_constraintStart_toStartOf="@id/btnRegist"
        app:layout_constraintTop_toBottomOf="@id/btnRegist" />

</androidx.constraintlayout.widget.ConstraintLayout>