<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screen.auth.regist.RegistFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="noScroll"
            app:toolbarId="@+id/toolbar">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_arrow_left" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/app_margin_32dp"
            android:paddingBottom="112dp">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/regist_desc"
                android:textAlignment="center"
                style="@style/TextAppearance.Material3.ActionBar.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfFullName"
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/tvRegister"
                app:layout_constraintStart_toStartOf="@id/tvRegister"
                app:layout_constraintTop_toBottomOf="@id/tvRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfEmail"
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/tfFullName"
                app:layout_constraintStart_toStartOf="@id/tfFullName"
                app:layout_constraintTop_toBottomOf="@id/tfFullName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfPassword"
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/tfEmail"
                app:layout_constraintStart_toStartOf="@id/tfEmail"
                app:layout_constraintTop_toBottomOf="@id/tfEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfConfirmPass"
                style="?attr/textInputFilledStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@id/tfPassword"
                app:layout_constraintStart_toStartOf="@id/tfPassword"
                app:layout_constraintTop_toBottomOf="@id/tfPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="0.7dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="24dp"
                android:background="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="@id/tfConfirmPass"
                app:layout_constraintStart_toStartOf="@id/tfConfirmPass"
                app:layout_constraintTop_toBottomOf="@id/tfConfirmPass" />


            <Button
                android:id="@+id/btnRegist"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_56dp"
                android:layout_marginTop="12dp"
                android:text="@string/sign_up"
                android:enabled="false"
                android:backgroundTint="@color/grey"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tfConfirmPass"
                app:layout_constraintStart_toStartOf="@id/tfConfirmPass"
                app:layout_constraintTop_toBottomOf="@id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>